fix nav on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,6 @@ span.navbar-text {
     font-weight: 900;
 }
 
-
 /* JUMBOTRON */
 .jumbotron {
   position: relative;
@@ -191,6 +190,13 @@ i {
   .intro {
     width: 100%;
   }
+
+    span.navbar-text {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    color: white;
+    font-weight: 900;
+}
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
@@ -206,4 +212,5 @@ i {
   .intro {
     width: 80%;
   }
+
 }
